    new requirement was documented nice and clearly. Oh, wait ...
  * Update desktop translation files against new source text; all languages
    need some retranslation work.
  * Update imported translations from gtk+2.0 2.17.7-0ubuntu3.

  [ Roman Shtylman ]
  * fix for (LP: #413159). Acceptable for feature freeze, but still needs 
   work and further review

 -- Roman Shtylman <shtylman@gmail.com>  Tue, 25 Aug 2009 22:30:21 -0400

ubiquity (1.99.12) karmic; urgency=low

  [ Colin Watson ]
  * Ensure that /usr/share/applications and /usr/share/applications/kde
    exist in oem-config-gtk and oem-config-gtk respectively, and remove the
    .desktop files installed there on removal (LP: #417255).

  [ Evan Dandrea ]
  * Automatic update of included source packages: base-installer
    1.101ubuntu4, user-setup 1.27ubuntu9.

  [ Roman Shtylman ]
  * Added support for encrypted home/swap login in kde installer 

 -- Roman Shtylman <shtylman@gmail.com>  Mon, 24 Aug 2009 22:06:45 -0400

ubiquity (1.99.11) karmic; urgency=low

  [ Evan Dandrea ]
  * Rename ubiquity.dirs.* to ubiquity.dirs-* to avoid dh_installdirs using
    the files as overrides.

  [ Roman Shtylman ]
  * Merged ~cr3/ubiquity/bug-417417 with fix for (LP: #417417) 

 -- Roman Shtylman <shtylman@gmail.com>  Sun, 23 Aug 2009 09:17:56 -0400

ubiquity (1.99.10) karmic; urgency=low

  [ Michael Terry ]
  * gtk: Remove separators from hand-crafted dialogs

  [ Evan Dandrea ]
  * Fix code around the debhelper 7 migration to build on ARM again.
    Thanks Loïc Minier!

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 21 Aug 2009 09:56:44 +0100

ubiquity (1.99.9) karmic; urgency=low

  * Automatic update of included source packages: user-setup
    1.27ubuntu8.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 19 Aug 2009 17:47:10 +0100

ubiquity (1.99.8) karmic; urgency=low

  * Adjust the way the locale is passed to ubiquity-slideshow-ubuntu.
  * Depend on cryptsetup for encrypted home directory support.